multiple boards BoardLocation update, make arty auto multi board (part)